--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,47 +5,44 @@ h1 {
     font-weight: bold;
     font-size: 28px;
     color: #ffffff;
+    text-align: center;
+    margin: 0 auto;
 }
 
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 26px;
     color: #4aaaa5;
 }
 
 h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight:100; 
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
 }
 
 h4 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
 }
 
 h5 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
 }
 
 h6 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
 }
 
 h7 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
 }
 
@@ -57,15 +54,17 @@ p {
 
 li {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 16px;
+    display: inline;
+    font-size: 18px;
     color: #777777;
+    padding-right:18px;
 }
 
 /** Backgorund **/
 body {
     background-image: url("../images/cloudy-day.png");
     width: 1355px;
-    margin: auto
+    margin: 0 auto;
 }
 
 header {
@@ -75,9 +74,10 @@ header {
     border-bottom: 2px solid #dddddd;
 }
 
-.wrapper {
+#bluebox {
     background-color: #4aaaa5;
     width: 275px;
+    height: 24px;
     padding: 30px;
     margin-left: 136px;
     float: left;
@@ -89,21 +89,22 @@ header {
 }
 
 /** ABOUT ME **/
-#main {
+#main_summary {
     background-color: #ffffff;
-    width: 650px;
-    height: 480px;
+    width: 1096px;
+    height: 570px;
     margin-left: 136px;
     margin-bottom: 40px;
+    margin-top:40px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
     float: left;
 }
 
-hr.heavy {
+hr.top_line {
     border-top: 3px solid #dddddd;
-    width: 588px;
+    width: 1030px;
     margin-top: 36px;
     margin-left: 28px;
     margin-bottom: 30px;
@@ -117,13 +118,16 @@ hr.heavy {
 
 .padding {
     padding-top: 38px;
-    padding-left: 28px;
-    padding-right: 28px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 960px;
+    height:24px;
+    margin: 0 auto;
 }
 
-.bodycopy {
-    padding-left: 28px;
-    padding-right: 28px;
+.content {
+    padding-left: 30px;
+    padding-right: 30px;
     line-height: 28px;
 }
 
