--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,12 +63,12 @@ li {
 /** Backgorund **/
 body {
     background-image: url("../images/cloudy-day.png");
-    width: 1355px;
+    width: 100%;
     margin: 0 auto;
 }
 
 header {
-    width: 1355px;
+    width: 100%;
     height: 84px;
     background-color: #ffffff;
     border-bottom: 2px solid #dddddd;
@@ -80,7 +80,7 @@ header {
     height: 24px;
     padding: 30px;
     margin-left: 136px;
-    float: left;
+    float:left;
 }
 
 .navbar{
@@ -91,23 +91,25 @@ header {
 /** ABOUT ME **/
 #main_summary {
     background-color: #ffffff;
-    width: 1096px;
-    height: 570px;
-    margin-left: 136px;
+    width: 960px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
     margin-bottom: 40px;
-    margin-top:40px;
+    margin-top: 40px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
-    float: left;
+    float: inherit;
 }
 
 hr.top_line {
     border-top: 3px solid #dddddd;
-    width: 1030px;
+    width: 880px;
     margin-top: 36px;
     margin-left: 28px;
     margin-bottom: 30px;
+    margin-right:36px;
 }
 
 #bio-image {
@@ -134,15 +136,31 @@ hr.top_line {
 /** CONTACT FORM **/
 
 #form {
-    background-color: #ffffff;
-    width: 650px;
-    height: 615px;
-    margin-left: 136px;
+  background-color: #ffffff;
+    width: 960px;
+    height: 650px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 40px;
+    margin-top:40px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
-    float: left;
+    float: inherit;
+}
+
+fieldset {
+    display: block;
+    margin-inline-start: 2px;
+    margin-inline-end: 2px;
+    padding-block-start: 0.35em;
+    padding-inline-start: 0.75em;
+    padding-inline-end: 0.75em;
+    padding-block-end: 0.625em;
+    min-inline-size: min-content;
+    border-width:0px;
+    border-color: none;
+    border-image: initial;
 }
 
 label {
@@ -153,7 +171,7 @@ label {
 }
 
 input[type=text], select {
-    width: 572px;
+    width: 850px;
     height: 36px;
     padding-left: 12px;
     border: 1px solid #dddddd;
@@ -166,7 +184,7 @@ input[type=text], select {
 }
 
 input[type=email], select {
-    width: 572px;
+    width: 850px;
     height: 36px;
     padding-left: 12px;
     border: 1px solid #dddddd;
@@ -179,7 +197,7 @@ input[type=email], select {
 }
 
 input[type=textarea], select {
-    width: 572px;
+    width: 850px;
     height: 200px;
     padding-left: 12px;
     border: 1px solid #dddddd;
@@ -208,14 +226,16 @@ input[type=submit] {
 
 #portfolio {
     background-color: #ffffff;
-    width: 650px;
-    height: 875px;
-    margin-left: 136px;
+    width: 960px;
+    height: 650px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 40px;
+    margin-top: 40px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
-    float: left;
+    float: inherit;
 }
 
 h4 {
@@ -287,7 +307,7 @@ footer {
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     font-size: 12px;
     color: #dddddd;
-    width: 1355px;
+    width: 100%;
     background-color: #666666;
     text-align: center;
     padding-top: 36px;
