--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,30 +20,8 @@ h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
     color: #ffffff;
-}
-
-h4 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    color: #ffffff;
-}
-
-h5 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    color: #ffffff;
-}
-
-h6 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    color: #ffffff;
-}
-
-h7 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    color: #ffffff;
+    padding-top:18px;
+    text-align: center;
 }
 
 p {
@@ -76,16 +54,17 @@ header {
 
 #bluebox {
     background-color: #4aaaa5;
-    width: 275px;
+    width: 200px;
     height: 24px;
     padding: 30px;
-    margin-left: 136px;
-    float:left;
+    margin-left: 25%;
+    float: left;
 }
 
 .navbar{
-    margin-left:870px;
-    padding-top:30px;
+    margin-right:25%;
+    padding-top: 30px;
+    float: right;
 }
 
 /** ABOUT ME **/
@@ -227,7 +206,7 @@ input[type=submit] {
 #portfolio {
     background-color: #ffffff;
     width: 960px;
-    height: 650px;
+    height: 900px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
@@ -238,16 +217,12 @@ input[type=submit] {
     float: inherit;
 }
 
-h4 {
-    padding-top: 18px;
-    text-align: center;
-}
-
 article {
     background-color: #4aaaa5;
     width: 264px;
-    height: 60px;
-    margin-top: 126px;
+    height: 50px;
+    margin: 0 auto;
+    padding: inherit;
 }
 
 .room{
@@ -302,6 +277,7 @@ article {
     margin-left: 30px;
     float: left;
 }
+
 /** FOOTER **/
 footer {
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
