--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,14 +16,6 @@ h2 {
     color: #4aaaa5;
 }
 
-h3 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    color: #ffffff;
-    padding-top:18px;
-    text-align: center;
-}
-
 p {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 16px;
@@ -57,8 +49,8 @@ header {
     width: 200px;
     height: 24px;
     padding: 30px;
-    margin-left: 25%;
-    float: left;
+    margin-left: 20%;
+    float:left;
 }
 
 .navbar{
@@ -206,7 +198,7 @@ input[type=submit] {
 #portfolio {
     background-color: #ffffff;
     width: 960px;
-    height: 900px;
+    height: 1100px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
@@ -223,59 +215,61 @@ article {
     height: 50px;
     margin: 0 auto;
     padding: inherit;
+    z-index: 1;
+}
+
+h3 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    color: #ffffff;
+    padding-top:18px;
+    text-align: center;
+    
 }
 
 .room{
     background-image: url("../images/room.jpg");
-    background-repeat: no-repeat;
     background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-left: 30px;
+    margin-left: 50px;
     float: left;
+    position: initial;
+    z-index: 2;
 }
 
 .makeup {
     background-image: url("../images/glossier.jpg");
-    background-repeat: no-repeat;
     background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-right: 34px;
-    float: right;
+    float: left;
+    position: relative;
+    left: 40px;
+    z-index: 2;
 }
 
 .orangecover {
     background-image: url("../images/orangecover.jpg");
-    background-repeat: no-repeat;
     background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-left: 30px;
-    float: left;
+    margin-left: 50px;
+    position: absolute;
+    top: 550px;
+    z-index: 2;
 }
 
 .pinkcover {
     background-image: url("../images/pinkcover.jpg");
-    background-repeat: no-repeat;
     background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-right: 34px;
-    float: right;
+    position: absolute;
+    top: 550px;
+    right: 585px;
+    z-index: 2;
 }
 
 .quora {
     background-image: url("../images/quora.jpg");
-    background-repeat: no-repeat;
     background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-left: 30px;
-    float: left;
+    margin-left: 50px;
+    position: absolute;
+    top: 850px;
+    z-index: 2;
 }
 
 /** FOOTER **/
